--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -18,11 +18,11 @@
             </li>
             
             <li class="nav-item " routerLinkActive = "active">
-                <a class="nav-link subtemp" [routerLink]="'/aboutus'">About Us</a>
+                <a class="nav-link subtemp" [routerLink]="'/about-us'">About Us</a>
             </li>
             
             <li class="nav-item " routerLinkActive = "active">
-                <a class="nav-link subtemp " [routerLink]="'/contactus'">Contact Us</a>
+                <a class="nav-link subtemp " [routerLink]="'/contact-us'">Contact Us</a>
             </li>
         </ul>
     </div>
