--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,14 +1,12 @@
 <app-header></app-header>
-<div class="container">
-    <div class="box">
-        <div class="box-row">
-            <div class="box-cell box1">
-                <a [routerLink]="'/dashboard/stats'">Stats</a>
-            </div>
-            <div class="box-cell">
-                <router-outlet></router-outlet>
-            </div>
-        </div>
-    </div>
+<div >
+    <div class="row">
+      <div class="col-sm-2" style="background-image : linear-gradient(to right, rgba(237,37,83) , rgba(244,124,151))">
+        <app-side-nav></app-side-nav>
+      </div>
+      <div class="col-sm-10" style="padding: 0;">
+        <router-outlet></router-outlet>
+      </div>
+  </div>
 </div>
 <app-footer></app-footer>
