--- a/src/app/shared/side-nav/side-nav.component.html
+++ b/src/app/shared/side-nav/side-nav.component.html
@@ -56,6 +56,21 @@
                 <span>Add Workout Plan </span></a>
         </li>
 
+          <!-- Divider -->
+          <hr class="sidebar-divider">
+
+          <!-- ------------------------------------------------  -->
+  
+          <!-- Divider -->
+          <hr class="sidebar-divider my-0">
+  
+          <!-- Nav Item - Dashboard -->
+          <li class="nav-item active">
+              <a class="nav-link" routerLink="/dashboard/go-premium">
+                      <span class="text-gray"></span>&nbsp;
+                  <span>Go Premium</span></a>
+          </li>
+
         <!-- Divider -->
         <hr class="sidebar-divider">
 
